--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/PreviewerControls/ShaderPreviewerControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/PreviewerControls/ShaderPreviewerControl.xaml
@@ -20,10 +20,10 @@
 					<ColumnDefinition />
 				</Grid.ColumnDefinitions>
 				<StackPanel Grid.Column="0">
-					<TextBlock FontWeight="Bold">Shader name</TextBlock>
+					<Label FontWeight="Bold">Shader name</Label>
 				</StackPanel>
 				<StackPanel Grid.Column="1">
-					<TextBlock Name="ShaderName">N/A</TextBlock>
+					<Label Name="ShaderName">N/A</Label>
 				</StackPanel>
 			</Grid>
 		</StackPanel>
@@ -36,12 +36,12 @@
 					<ColumnDefinition />
 				</Grid.ColumnDefinitions>
 				<StackPanel Grid.Column="0">
-					<TextBlock FontWeight="Bold">Vertex file name</TextBlock>
-					<TextBlock FontWeight="Bold">Fragment file name</TextBlock>
+					<Label FontWeight="Bold">Vertex file name</Label>
+					<Label FontWeight="Bold">Fragment file name</Label>
 				</StackPanel>
 				<StackPanel Grid.Column="1">
-					<TextBlock Name="VertexFileName">N/A</TextBlock>
-					<TextBlock Name="FragmentFileName">N/A</TextBlock>
+					<Label Name="VertexFileName">N/A</Label>
+					<Label Name="FragmentFileName">N/A</Label>
 				</StackPanel>
 			</Grid>
 		</StackPanel>
