--- a/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
@@ -32,7 +32,41 @@
 	<Style TargetType="TabControl">
 		<Style.Setters>
 			<Setter Property="Background" Value="{StaticResource Gray2}" />
+			<Setter Property="BorderBrush" Value="{StaticResource Gray3}" />
 		</Style.Setters>
+	</Style>
+
+	<!--TODO: Move to DevilDaggersCore.Wpf-->
+	<Style TargetType="{x:Type TabItem}">
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type TabItem}">
+					<Grid>
+						<Border Name="Border" Margin="1" Background="{StaticResource Gray2}" BorderBrush="{StaticResource Gray3}" BorderThickness="1">
+							<Grid>
+								<Grid x:Name="GridMouseOver"/>
+								<ContentPresenter x:Name="ContentSite" VerticalAlignment="Center" HorizontalAlignment="Center" ContentSource="Header" Margin="6,2,6,2" />
+							</Grid>
+						</Border>
+					</Grid>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsMouseOver" Value="True">
+							<Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource BorderHighlight2}" />
+							<Setter TargetName="Border" Property="Background" Value="{StaticResource BackgroundHighlight2}" />
+							<Setter Property="Foreground" Value="{StaticResource Text}" />
+						</Trigger>
+						<Trigger Property="IsSelected" Value="True">
+							<Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource BorderHighlight1}" />
+							<Setter TargetName="Border" Property="Background" Value="{StaticResource BackgroundHighlight1}" />
+							<Setter Property="Foreground" Value="{StaticResource Text}" />
+						</Trigger>
+						<Trigger Property="IsSelected" Value="False">
+							<Setter Property="Foreground" Value="{StaticResource Text}" />
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
 	</Style>
 
 	<Style TargetType="Label" x:Key="PreviewTitleLabel">
@@ -56,6 +90,7 @@
 		<Style.Setters>
 			<Setter Property="FontFamily" Value="Consolas" />
 			<Setter Property="Background" Value="{StaticResource Gray1}" />
+			<Setter Property="BorderBrush" Value="{StaticResource Gray3}" />
 			<Setter Property="Foreground" Value="{StaticResource Text}" />
 			<Setter Property="IsReadOnly" Value="True" />
 		</Style.Setters>
