--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetTabControls/AssetTabControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetTabControls/AssetTabControl.xaml
@@ -1,20 +1,18 @@
-﻿<UserControl x:Class="DevilDaggersAssetEditor.Wpf.Gui.UserControls.AssetTabControls.TexturesAssetTabControl"
+﻿<UserControl x:Class="DevilDaggersAssetEditor.Wpf.Gui.UserControls.AssetTabControls.AssetTabControl"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:previewerControls="clr-namespace:DevilDaggersAssetEditor.Wpf.Gui.UserControls.PreviewerControls"
 			 mc:Ignorable="d"
              d:DesignHeight="800" d:DesignWidth="800"
 			 Loaded="UserControl_Loaded"
 			 SizeChanged="UserControl_SizeChanged">
-	<Grid>
+	<Grid Name="MainGrid">
 		<Grid.RowDefinitions>
-			<RowDefinition Height="256" />
+			<RowDefinition Height="96" />
 			<RowDefinition Height="192" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<previewerControls:TexturePreviewerControl Grid.Row="0" x:Name="Previewer" />
 		<Grid Grid.Row="1">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="22" />
@@ -39,7 +37,7 @@
 
 			<Rectangle Grid.ColumnSpan="6" Grid.Row="2" Fill="{StaticResource Gray3}" />
 			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0">
-				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Texture name</TextBlock>
+				<TextBlock Style="{StaticResource AssetTextBlock}" FontWeight="Bold">Model Binding name</TextBlock>
 				<Button Name="NameSortButton" Click="NameSortButton_Click">
 					<Image Style="{StaticResource SortIcon}" />
 				</Button>
@@ -63,6 +61,6 @@
 				</Button>
 			</StackPanel>
 		</Grid>
-		<ListView Grid.Row="2" Name="AssetEditor" BorderThickness="0" HorizontalContentAlignment="Stretch" SelectionMode="Single" SelectionChanged="AssetEditor_SelectionChanged" ScrollViewer.VerticalScrollBarVisibility="Visible" ItemContainerStyle="{StaticResource ListViewItemContainerStyle}" Background="{StaticResource Gray2}"/>
+		<ListView Grid.Row="2" Name="AssetEditor" BorderThickness="0" HorizontalContentAlignment="Stretch" SelectionMode="Single" SelectionChanged="AssetEditor_SelectionChanged" ScrollViewer.VerticalScrollBarVisibility="Visible" ItemContainerStyle="{StaticResource ListViewItemContainerStyle}" Background="{StaticResource Gray2}" />
 	</Grid>
 </UserControl>
