--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/Main.xaml
@@ -4,10 +4,9 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:userControls="clr-namespace:DevilDaggersAssetEditor.Wpf.Gui.UserControls"
-		xmlns:assetTabControls="clr-namespace:DevilDaggersAssetEditor.Wpf.Gui.UserControls.AssetTabControls"
 		mc:Ignorable="d"
         Title="Devil Daggers Asset Editor" Height="900" Width="1600"
-		Loaded="Window_Loaded"
+        Loaded="Window_Loaded"
 		SizeChanged="Window_SizeChanged">
 	<Grid>
 		<Grid.RowDefinitions>
@@ -18,29 +17,7 @@
 			<userControls:MenuBarUserControl x:Name="MenuBar" />
 		</DockPanel>
 		<ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-			<TabControl Grid.Row="1" Name="TabControl" Width="1366" Height="768">
-				<TabItem Header="audio/Audio">
-					<assetTabControls:AudioAssetTabControl x:Name="AudioAudioAssetTabControl" BinaryFileType="Audio" />
-				</TabItem>
-				<TabItem Header="core/Shaders">
-					<assetTabControls:ShadersAssetTabControl x:Name="CoreShadersAssetTabControl" BinaryFileType="Core" />
-				</TabItem>
-				<TabItem Header="dd/Model Bindings">
-					<assetTabControls:ModelBindingsAssetTabControl x:Name="DdModelBindingsAssetTabControl" BinaryFileType="DD" />
-				</TabItem>
-				<TabItem Header="dd/Models">
-					<assetTabControls:ModelsAssetTabControl x:Name="DdModelsAssetTabControl" BinaryFileType="DD" />
-				</TabItem>
-				<TabItem Header="dd/Shaders">
-					<assetTabControls:ShadersAssetTabControl x:Name="DdShadersAssetTabControl" BinaryFileType="DD" />
-				</TabItem>
-				<TabItem Header="dd/Textures">
-					<assetTabControls:TexturesAssetTabControl x:Name="DdTexturesAssetTabControl" BinaryFileType="DD" />
-				</TabItem>
-				<TabItem Header="particle/Particles">
-					<assetTabControls:ParticlesAssetTabControl x:Name="ParticleParticlesAssetTabControl" BinaryFileType="Particle" />
-				</TabItem>
-			</TabControl>
+			<TabControl Grid.Row="1" Name="TabControl" Width="1366" Height="768" />
 		</ScrollViewer>
 	</Grid>
 </Window>
