--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
@@ -18,7 +18,11 @@
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Name="TextBlockDescription" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" Name="TextBlockEditorPath" />
-		<Button Grid.Column="4" Click="ButtonRemovePath_Click">Reset</Button>
-		<Button Grid.Column="5" Click="ButtonBrowsePath_Click">Browse</Button>
+		<StackPanel Grid.Column="4">
+			<Button Click="ButtonRemovePath_Click">Reset</Button>
+		</StackPanel>
+		<StackPanel Grid.Column="5">
+			<Button Click="ButtonBrowsePath_Click">Browse</Button>
+		</StackPanel>
 	</Grid>
 </UserControl>
