Rewrite the menu and create ExtractBinaries and MakeBinaries windows, remove tab control handlers

--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/MenuBar.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/MenuBar.xaml
@@ -6,12 +6,20 @@
 			 mc:Ignorable="d"
              d:DesignHeight="20" d:DesignWidth="800">
 	<Menu DockPanel.Dock="Top" Name="MenuPanel">
-		<MenuItem Header="File" Name="FileMenuItem" />
+		<MenuItem Header="File">
+			<MenuItem Header="Extract binaries" Click="ExtractBinaries_Click" />
+			<MenuItem Header="Make binaries" Click="MakeBinaries_Click" />
+			<MenuItem Header="Open mod" Click="OpenMod_Click" />
+			<MenuItem Header="Save mod" Click="SaveMod_Click" />
+			<MenuItem Header="Import assets" Click="ImportAssets_Click" />
+		</MenuItem>
 		<MenuItem Header="Options">
 			<MenuItem Header="Settings" Click="Settings_Click" />
 		</MenuItem>
 		<MenuItem Header="Tools">
 			<MenuItem Header="Analyze binary file" Click="AnalyzeBinaryFileMenuItem_Click" />
+			<MenuItem Header="Import loudness" Click="ImportLoudness_Click" />
+			<MenuItem Header="Export loudness" Click="ExportLoudness_Click" />
 		</MenuItem>
 		<MenuItem Header="Help" Name="HelpItem">
 			<MenuItem Header="Help" Click="Help_Click" />
