--- a/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
@@ -106,4 +106,13 @@
 			<Setter Property="IsReadOnly" Value="True" />
 		</Style.Setters>
 	</Style>
+
+	<Style TargetType="Button" x:Key="OkButtonLarge" BasedOn="{StaticResource {x:Type Button}}">
+		<Style.Setters>
+			<Setter Property="Width" Value="192" />
+			<Setter Property="FontSize" Value="16" />
+			<Setter Property="Margin" Value="2,6,2,2" />
+			<Setter Property="IsDefault" Value="True" />
+		</Style.Setters>
+	</Style>
 </ResourceDictionary>
