--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/ExtractBinaries.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/ExtractBinaries.xaml
@@ -4,31 +4,31 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-        Title="Extract binaries" Height="512" Width="512" ResizeMode="NoResize">
-	<StackPanel x:Name="Data">
+        Title="Extract binaries" Height="768" Width="768" ResizeMode="NoResize">
+	<StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<Label>'audio' binary path</Label>
-			<Label Content="{Binding AudioPath, Mode=OneWay}" />
+			<TextBox Name="TextBoxAudio" TextChanged="TextBoxAudio_TextChanged" />
 			<Button Content="Browse" Click="BrowseAudioButton_Click" Width="128" HorizontalAlignment="Left" />
 		</StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<Label>'core' binary path</Label>
-			<Label Content="{Binding CorePath, Mode=OneWay}" />
+			<TextBox Name="TextBoxCore" TextChanged="TextBoxCore_TextChanged" />
 			<Button Content="Browse" Click="BrowseCoreButton_Click" Width="128" HorizontalAlignment="Left" />
 		</StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<Label>'dd' binary path</Label>
-			<Label Content="{Binding DdPath, Mode=OneWay}" />
+			<TextBox Name="TextBoxDd" TextChanged="TextBoxDd_TextChanged" />
 			<Button Content="Browse" Click="BrowseDdButton_Click" Width="128" HorizontalAlignment="Left" />
 		</StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<Label>'particle' binary path</Label>
-			<Label Content="{Binding ParticlePath, Mode=OneWay}" />
+			<TextBox Name="TextBoxParticle" TextChanged="TextBoxParticle_TextChanged" />
 			<Button Content="Browse" Click="BrowseParticleButton_Click" Width="128" HorizontalAlignment="Left" />
 		</StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<Label>Assets output directory</Label>
-			<Label Content="{Binding OutputPath, Mode=OneWay}" />
+			<TextBox Name="TextBoxOutput" TextChanged="TextBoxOutput_TextChanged" />
 			<Button Content="Browse" Click="BrowseOutputButton_Click" Width="128" HorizontalAlignment="Left" />
 		</StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
