Refactor progress; remove ProgressWindow and implement ProgressWrapper class

--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/MakeBinaries.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/MakeBinaries.xaml
@@ -4,30 +4,40 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-        Title="Make binaries" Height="512" Width="512" ResizeMode="NoResize">
+        Title="Make binaries" Height="768" Width="768" ResizeMode="NoResize">
 	<StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<Label>'audio' binary path</Label>
 			<TextBox Name="TextBoxAudio" TextChanged="TextBoxAudio_TextChanged" />
 			<Button Content="Browse" Click="BrowseAudioButton_Click" Width="128" HorizontalAlignment="Left" />
+			<ProgressBar Name="ProgressBarAudio" Height="18" Minimum="0" Maximum="1" />
+			<TextBlock Name="ProgressDescriptionAudio" />
 		</StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<Label>'core' binary path</Label>
 			<TextBox Name="TextBoxCore" TextChanged="TextBoxCore_TextChanged" />
 			<Button Content="Browse" Click="BrowseCoreButton_Click" Width="128" HorizontalAlignment="Left" />
+			<ProgressBar Name="ProgressBarCore" Height="18" Minimum="0" Maximum="1" />
+			<TextBlock Name="ProgressDescriptionCore" />
 		</StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<Label>'dd' binary path</Label>
 			<TextBox Name="TextBoxDd" TextChanged="TextBoxDd_TextChanged" />
 			<Button Content="Browse" Click="BrowseDdButton_Click" Width="128" HorizontalAlignment="Left" />
+			<ProgressBar Name="ProgressBarDd" Height="18" Minimum="0" Maximum="1" />
+			<TextBlock Name="ProgressDescriptionDd" />
 		</StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<Label>'particle' binary path</Label>
 			<TextBox Name="TextBoxParticle" TextChanged="TextBoxParticle_TextChanged" />
 			<Button Content="Browse" Click="BrowseParticleButton_Click" Width="128" HorizontalAlignment="Left" />
+			<ProgressBar Name="ProgressBarParticle" Height="18" Minimum="0" Maximum="1" />
+			<TextBlock Name="ProgressDescriptionParticle" />
 		</StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<Button Content="Make binaries" Click="MakeBinaries_Click" Width="128" HorizontalAlignment="Left" />
+			<ProgressBar Name="ProgressBar" Height="18" Minimum="0" Maximum="1" />
+			<TextBlock Name="ProgressDescription" />
 		</StackPanel>
 	</StackPanel>
 </Window>
