--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
@@ -11,18 +11,26 @@
 			<ColumnDefinition Width="3*" />
 			<ColumnDefinition Width="3*" />
 			<ColumnDefinition Width="5*" />
-			<ColumnDefinition Width="6*" />
-			<ColumnDefinition />
-			<ColumnDefinition />
+			<ColumnDefinition Width="8*" />
 		</Grid.ColumnDefinitions>
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Text="{Binding AssetName}" />
+		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="0" Name="TextBlockAssetName" />
 		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="2" Name="TextBlockDescription" />
-		<TextBlock Style="{StaticResource AssetTextBlock}" Grid.Column="3" Name="TextBlockEditorPath" />
-		<StackPanel Grid.Column="4">
-			<Button Click="ButtonRemovePath_Click">Reset</Button>
-		</StackPanel>
-		<StackPanel Grid.Column="5">
-			<Button Click="ButtonBrowsePath_Click">Browse</Button>
-		</StackPanel>
+		<Grid Grid.Column="3">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="3*" />
+				<ColumnDefinition />
+				<ColumnDefinition />
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="24" />
+				<RowDefinition />
+			</Grid.RowDefinitions>
+			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPath" />
+			<TextBlock Grid.Row="1" Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPathFragmentShader" Visibility="Collapsed" />
+			<Button Grid.Column="1" Click="ButtonRemovePath_Click">Reset</Button>
+			<Button Grid.Column="1" Grid.Row="1" Click="ButtonRemovePathFragmentShader_Click" Name="RemovePathButtonFragmentShader" Visibility="Collapsed">Reset</Button>
+			<Button Grid.Column="2" Click="ButtonBrowsePath_Click">Browse</Button>
+			<Button Grid.Column="2" Grid.Row="1" Click="ButtonBrowsePathFragmentShader_Click" Name="BrowseButtonFragmentShader" Visibility="Collapsed">Browse</Button>
+		</Grid>
 	</Grid>
 </UserControl>
