--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
@@ -6,7 +6,7 @@
 			 mc:Ignorable="d"
              d:DesignHeight="24" d:DesignWidth="800"
 			 SizeChanged="UserControl_SizeChanged">
-	<Grid x:Name="Data">
+	<Grid Name="Data">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="3*" />
 			<ColumnDefinition Width="3*" />
@@ -27,8 +27,10 @@
 			</Grid.RowDefinitions>
 			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPath" />
 			<TextBlock Grid.Row="1" Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPathFragmentShader" Visibility="Collapsed" />
+
 			<Button Grid.Column="1" Click="ButtonRemovePath_Click">Reset</Button>
 			<Button Grid.Column="1" Grid.Row="1" Click="ButtonRemovePathFragmentShader_Click" Name="RemovePathButtonFragmentShader" Visibility="Collapsed">Reset</Button>
+
 			<Button Grid.Column="2" Click="ButtonBrowsePath_Click">Browse</Button>
 			<Button Grid.Column="2" Grid.Row="1" Click="ButtonBrowsePathFragmentShader_Click" Name="BrowseButtonFragmentShader" Visibility="Collapsed">Browse</Button>
 		</Grid>
