--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
@@ -19,13 +19,14 @@
 			<RowDefinition Height="38" />
 			<RowDefinition Height="*" Name="RowDefinitionFragmentShader" />
 		</Grid.RowDefinitions>
-		<TextBlock Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Grid.Column="0"  TextWrapping="Wrap" Name="TextBlockAssetName" />
-		<TextBlock Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Grid.Column="2"  TextWrapping="Wrap" Name="TextBlockDescription" />
-		<TextBlock Grid.Column="3" Style="{StaticResource AssetTextBlock}" TextWrapping="Wrap" Name="TextBlockEditorPath" />
+
+		<TextBlock Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Grid.Column="0"  TextWrapping="Wrap" Name="TextBlockAssetName" VerticalAlignment="Center" />
+		<TextBlock Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Grid.Column="2"  TextWrapping="Wrap" Name="TextBlockDescription" VerticalAlignment="Center" />
+		<TextBlock Grid.Column="3" Style="{StaticResource AssetTextBlock}" TextWrapping="Wrap" Name="TextBlockEditorPath" VerticalAlignment="Center" />
 		<Button Grid.Column="4" Click="ButtonRemovePath_Click">Reset</Button>
 		<Button Grid.Column="5" Click="ButtonBrowsePath_Click">Browse</Button>
 
-		<TextBlock Grid.Column="3" Grid.Row="1" Style="{StaticResource AssetTextBlock}" TextWrapping="Wrap" Name="TextBlockEditorPathFragmentShader" Visibility="Collapsed" />
+		<TextBlock Grid.Column="3" Grid.Row="1" Style="{StaticResource AssetTextBlock}" TextWrapping="Wrap" Name="TextBlockEditorPathFragmentShader" Visibility="Collapsed" VerticalAlignment="Center" />
 		<Button Grid.Column="4" Grid.Row="1" Click="ButtonRemovePathFragmentShader_Click" Name="RemovePathButtonFragmentShader" Visibility="Collapsed">Reset</Button>
 		<Button Grid.Column="5" Grid.Row="1" Click="ButtonBrowsePathFragmentShader_Click" Name="BrowseButtonFragmentShader" Visibility="Collapsed">Browse</Button>
 	</Grid>
