Order and rename MenuBar click event handlers

--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/MenuBar.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/MenuBar.xaml
@@ -14,8 +14,8 @@
 			<MenuItem Header="Open mod" Click="OpenMod_Click" />
 			<MenuItem Header="Save mod" Click="SaveMod_Click" />
 			<Separator />
-			<MenuItem Header="Import audio loudness" Click="ImportLoudness_Click" />
-			<MenuItem Header="Export audio loudness" Click="ExportLoudness_Click" />
+			<MenuItem Header="Import audio loudness" Click="ImportAudioLoudness_Click" />
+			<MenuItem Header="Export audio loudness" Click="ExportAudioLoudness_Click" />
 			<Separator />
 			<MenuItem Header="Exit" Click="Exit_Click" />
 		</MenuItem>
@@ -23,14 +23,14 @@
 			<MenuItem Header="Settings" Click="Settings_Click" />
 		</MenuItem>
 		<MenuItem Header="Tools">
-			<MenuItem Header="Analyze binary file" Click="AnalyzeBinaryFileMenuItem_Click" />
+			<MenuItem Header="Analyze binary file" Click="AnalyzeBinaryFile_Click" />
 		</MenuItem>
 		<MenuItem Header="Help" Name="HelpItem">
 			<MenuItem Header="Help" Click="Help_Click" />
 			<MenuItem Header="About" Click="About_Click" />
 			<MenuItem Header="Changelog" Click="Changelog_Click" />
-			<MenuItem Header="View source code" Click="SourceCode_Click" />
-			<MenuItem Header="Check for updates" Name="UpdateItem" Click="Update_Click" />
+			<MenuItem Header="View source code" Click="ViewSourceCode_Click" />
+			<MenuItem Header="Check for updates" Name="UpdateItem" Click="CheckForUpdates_Click" />
 		</MenuItem>
 	</Menu>
 </UserControl>
