--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
@@ -22,7 +22,14 @@
 
 		<TextBlock Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Grid.Column="0"  TextWrapping="Wrap" Name="TextBlockAssetName" VerticalAlignment="Center" />
 		<TextBlock Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Grid.Column="2"  TextWrapping="Wrap" Name="TextBlockDescription" VerticalAlignment="Center" />
-		<TextBlock Grid.Column="3" Style="{StaticResource AssetTextBlock}" TextWrapping="Wrap" Name="TextBlockEditorPath" VerticalAlignment="Center" />
+		<Grid Grid.Column="3">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="0" Name="ColumnDefinitionLoudness" />
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
+			<TextBox Name="TextBoxLoudness" Visibility="Collapsed"></TextBox>
+			<TextBlock Grid.Column="1" Style="{StaticResource AssetTextBlock}" TextWrapping="Wrap" Name="TextBlockEditorPath" VerticalAlignment="Center" />
+		</Grid>
 		<Button Grid.Column="4" Click="ButtonRemovePath_Click">Reset</Button>
 		<Button Grid.Column="5" Click="ButtonBrowsePath_Click">Browse</Button>
 
