Disable make and extract binaries buttons when respective tasks are in progress

--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/ExtractBinaries.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/ExtractBinaries.xaml
@@ -51,7 +51,7 @@
 		</StackPanel>
 		<StackPanel Style="{StaticResource PaddingStackPanel}" Background="{StaticResource Gray3}">
 			<StackPanel Style="{StaticResource PaddingStackPanel}">
-				<Button Content="Extract binaries" Click="ExtractBinaries_Click" Width="128" HorizontalAlignment="Left" />
+				<Button Name="ButtonExtractBinaries" Content="Extract binaries" Click="ExtractBinaries_Click" Width="128" HorizontalAlignment="Left" />
 			</StackPanel>
 		</StackPanel>
 	</StackPanel>
